Bugfix: The HUD is not centered correctly

--- a/src/game.css
+++ b/src/game.css
@@ -403,7 +403,8 @@
 }
 
 .game__hud-coords-and-lives {
-	width: 294px;
+	width: 264px;
+	margin-left: 8px;
 	height: 56px;
 	text-align: center;
 	line-height: 12px;
